дополнения по комментариям

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h2 class="heading heading_level-2">Популярные товары</h2>
       <div class="columns-row">
         <div class="column column_s-1 column_m-2 column_l-4">
-          <div class="product-card" data-product="unbrella">
+          <div class="product-card js-product-card" data-product="unbrella">
             <div class="product-card__image-container">
               <img class="product-card__image" src="images/product-1.jpg" alt="Зонт" />
             </div>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="column column_s-1 column_m-2 column_l-4">
-          <div class="product-card" data-product="bag">
+          <div class="product-card js-product-card" data-product="bag">
             <div class="product-card__image-container">
               <img class="product-card__image" src="images/product-2.jpg" alt="Сумка" />
             </div>
@@ -120,24 +120,24 @@
           </div>
         </div>
         <div class="column column_s-1 column_m-2 column_l-4">
-          <div class="product-card" data-product="slippers">
+          <div class="product-card js-product-card" data-product="slippers">
             <div class="product-card__image-container">
               <img class="product-card__image" src="images/product-3.jpg" alt="Шлепанцы" />
             </div>
             <div class="product-card__name">Шлепанцы</div>
             <div class="product-card__price">790 ₽</div>
             <div class="product-card__description">Красные резиновые шлепанцы</div>
-            <div class="product-card__sizing-container">
-              <div class="product-card__sizing-box"><label for="slippers-35"><input type="radio" name="size" class="radio" id="slippers-35" value="35"><span class="radio-button product-card__sizing-button">35</span></label></div>
-              <div class="product-card__sizing-box"><label for="slippers-36"><input type="radio" name="size" class="radio" id="slippers-36" value="36"><span class="radio-button product-card__sizing-button">36</span></label></div>
-              <div class="product-card__sizing-box"><label for="slippers-37"><input type="radio" name="size" class="radio" id="slippers-37" value="37"><span class="radio-button product-card__sizing-button">37</span></label></div>
-              <div class="product-card__sizing-box"><label for="slippers-38"><input type="radio" name="size" class="radio" id="slippers-38" value="38"><span class="radio-button product-card__sizing-button">38</span></label></div>
+            <div class="product-card__sizing-container js-sizing-container">
+              <div class="product-card__sizing-box"><label for="slippers-35"><input type="radio" name="size" class="radio" id="slippers-35" value="35"><span class="radio-button product-card__sizing-button js-sizing-button">35</span></label></div>
+              <div class="product-card__sizing-box"><label for="slippers-36"><input type="radio" name="size" class="radio" id="slippers-36" value="36"><span class="radio-button product-card__sizing-button js-sizing-button">36</span></label></div>
+              <div class="product-card__sizing-box"><label for="slippers-37"><input type="radio" name="size" class="radio" id="slippers-37" value="37"><span class="radio-button product-card__sizing-button js-sizing-button">37</span></label></div>
+              <div class="product-card__sizing-box"><label for="slippers-38"><input type="radio" name="size" class="radio" id="slippers-38" value="38"><span class="radio-button product-card__sizing-button js-sizing-button">38</span></label></div>
             </div>
             <button class="button product-card__order-button">Заказать</button>
           </div>
         </div>
         <div class="column column_s-1 column_m-2 column_l-4">
-          <div class="product-card" data-product="t-shirt">
+          <div class="product-card js-product-card" data-product="t-shirt">
             <div class="product-card__image-container">
               <img class="product-card__image" src="images/product-4.jpg" alt="Футболка" />
               <div class="product-card__sale">sale</div>
@@ -148,37 +148,37 @@
               390 ₽
             </div>
             <div class="product-card__description">Красная хлопоковая футболка с коротким руковом</div>
-            <div class="product-card__sizing-container">
-              <div class="product-card__sizing-box"><label for="t-shirt-XS"><input type="radio" name="size" class="radio" id="t-shirt-XS" value="XS"><span class="radio-button product-card__sizing-button">XS</span></label></div>
-              <div class="product-card__sizing-box"><label for="t-shirt-S"><input type="radio" name="size" class="radio" id="t-shirt-S" value="S"><span class="radio-button product-card__sizing-button">S</span></label></div>
-              <div class="product-card__sizing-box"><label for="t-shirt-M"><input type="radio" name="size" class="radio" id="t-shirt-M" value="M"><span class="radio-button product-card__sizing-button">M</span></label></div>
-              <div class="product-card__sizing-box"><label for="t-shirt-L"><input type="radio" name="size" class="radio" id="t-shirt-L" value="L"><span class="radio-button product-card__sizing-button">L</span></label></div>
-              <div class="product-card__sizing-box"><label for="t-shirt-XL"><input type="radio" name="size" class="radio" id="t-shirt-XL" value="XL"><span class="radio-button product-card__sizing-button">XL</span></label></div>
-              <div class="product-card__sizing-box"><label for="t-shirt-XXL"><input type="radio" name="size" class="radio" id="t-shirt-XXL" value="XXL"><span class="radio-button product-card__sizing-button">XXL</span></label></div>
+            <div class="product-card__sizing-container js-sizing-container">
+              <div class="product-card__sizing-box"><label for="t-shirt-XS"><input type="radio" name="size" class="radio" id="t-shirt-XS" value="XS"><span class="radio-button product-card__sizing-button js-sizing-button">XS</span></label></div>
+              <div class="product-card__sizing-box"><label for="t-shirt-S"><input type="radio" name="size" class="radio" id="t-shirt-S" value="S"><span class="radio-button product-card__sizing-button js-sizing-button">S</span></label></div>
+              <div class="product-card__sizing-box"><label for="t-shirt-M"><input type="radio" name="size" class="radio" id="t-shirt-M" value="M"><span class="radio-button product-card__sizing-button js-sizing-button">M</span></label></div>
+              <div class="product-card__sizing-box"><label for="t-shirt-L"><input type="radio" name="size" class="radio" id="t-shirt-L" value="L"><span class="radio-button product-card__sizing-button js-sizing-button">L</span></label></div>
+              <div class="product-card__sizing-box"><label for="t-shirt-XL"><input type="radio" name="size" class="radio" id="t-shirt-XL" value="XL"><span class="radio-button product-card__sizing-button js-sizing-button">XL</span></label></div>
+              <div class="product-card__sizing-box"><label for="t-shirt-XXL"><input type="radio" name="size" class="radio" id="t-shirt-XXL" value="XXL"><span class="radio-button product-card__sizing-button js-sizing-button">XXL</span></label></div>
             </div>
             <button class="button product-card__order-button">Заказать</button>
           </div>
         </div>
         <div class="column column_s-1 column_m-2 column_l-4">
-          <div class="product-card" data-product="hoodie">
+          <div class="product-card js-product-card" data-product="hoodie">
             <div class="product-card__image-container">
               <img class="product-card__image" src="images/product-5.jpg" alt="Толстовка" />
             </div>
             <div class="product-card__name">Толстовка</div>
             <div class="product-card__price">3 990 ₽</div>
             <div class="product-card__description">Красная хлопоковая толстовка с карманами</div>
-            <div class="product-card__sizing-container">
-              <div class="product-card__sizing-box"><label for="hoodie-XS"><input type="radio" name="size" class="radio" id="hoodie-XS" value="XS"><span class="radio-button product-card__sizing-button">XS</span></label></div>
-              <div class="product-card__sizing-box"><label for="hoodie-S"><input type="radio" name="size" class="radio" id="hoodie-S" value="S"><span class="radio-button product-card__sizing-button">S</span></label></div>
-              <div class="product-card__sizing-box"><label for="hoodie-M"><input type="radio" name="size" class="radio" id="hoodie-M" value="M"><span class="radio-button product-card__sizing-button">M</span></label></div>
-              <div class="product-card__sizing-box"><label for="hoodie-L"><input type="radio" name="size" class="radio" id="hoodie-L" value="L"><span class="radio-button product-card__sizing-button">L</span></label></div>
-              <div class="product-card__sizing-box"><label for="hoodie-XL"><input type="radio" name="size" class="radio" id="hoodie-XL" value="XL"><span class="radio-button product-card__sizing-button">XL</span></label></div>
+            <div class="product-card__sizing-container js-sizing-container">
+              <div class="product-card__sizing-box"><label for="hoodie-XS"><input type="radio" name="size" class="radio" id="hoodie-XS" value="XS"><span class="radio-button product-card__sizing-button js-sizing-button">XS</span></label></div>
+              <div class="product-card__sizing-box"><label for="hoodie-S"><input type="radio" name="size" class="radio" id="hoodie-S" value="S"><span class="radio-button product-card__sizing-button js-sizing-button">S</span></label></div>
+              <div class="product-card__sizing-box"><label for="hoodie-M"><input type="radio" name="size" class="radio" id="hoodie-M" value="M"><span class="radio-button product-card__sizing-button js-sizing-button">M</span></label></div>
+              <div class="product-card__sizing-box"><label for="hoodie-L"><input type="radio" name="size" class="radio" id="hoodie-L" value="L"><span class="radio-button product-card__sizing-button js-sizing-button">L</span></label></div>
+              <div class="product-card__sizing-box"><label for="hoodie-XL"><input type="radio" name="size" class="radio" id="hoodie-XL" value="XL"><span class="radio-button product-card__sizing-button js-sizing-button">XL</span></label></div>
             </div>
             <button class="button product-card__order-button">Заказать</button>
           </div>
         </div>
         <div class="column column_s-1 column_m-2 column_l-4">
-          <div class="product-card" data-product="pillow">
+          <div class="product-card js-product-card" data-product="pillow">
             <div class="product-card__image-container">
               <img class="product-card__image" src="images/product-6.jpg" alt="Подушка" />
             </div>
@@ -253,15 +253,14 @@
     </div>
   </footer>
 
-  <div class="popup-order popup" id="popup-order">
-
-    <div class="popup-content">
+  <div class="popup popup-order js-popup-order" id="popup-order">
+    <div class="popup__content">
       <div class="popup__close"></div>
       <div class="columns-wrapper">
         <div class="columns-row">
           <div class="column column_s-2 column_m-3 column_l-7">
             <div class="popup-order__form-container">
-              <form action="#" metod="get" class="form popup-order__form">
+              <form action="#" metod="get" class="form popup-order__form js-order-form">
                 <div class="form__items">
                   <div class="heading popup-order__form-title">Оформление заказа</div>
 
@@ -274,10 +273,15 @@
                       <input type="text" class="input" placeholder="Электронная почта" name="email" required autocomplete="off" />
                     </div>
                     <div class="form__item">
-                      <input type="text" class="input input_phone-pre" placeholder="+7" name="phone-pre" required value="+7" autocomplete="off" />
-                      <input type="text" class="input input_phone-code" placeholder="Код" name="phone-code" required autocomplete="off" />
-                      <input type="text" class="input input_phone-number" placeholder="Номер" name="phone-number" required autocomplete="off" />
-                      <input type="hidden" name="phone">
+                      <label class="form__label-wrapper">
+                        <input type="text" class="input input_phone-pre" placeholder="+7" name="phone-pre" required value="+7" autocomplete="off" />
+                      </label>
+                      <label class="form__label-wrapper">
+                        <input type="text" class="input input_phone-code" placeholder="Код" name="phone-code" required autocomplete="off" />
+                      </label>
+                      <label class="form__label-wrapper">
+                        <input type="text" class="input input_phone-number" placeholder="Номер" name="phone-number" required autocomplete="off" />
+                      </label>
                     </div>
                   </div>
 
@@ -301,7 +305,7 @@
                       <input type="text" class="input" name="city" id="areas" placeholder="Город" required autocomplete="off" />
                     </div>
                     <div class="form__element">
-                      <div id="input-suggests-areas" class="input-suggests input-suggests_areas popup-order__areas"></div>
+                      <div class="js-input-suggests-areas input-suggests input-suggests_areas popup-order__areas"></div>
                     </div>
                     <div class="form__item">
                       <textarea name="address" id="address" cols="30" rows="4" class="textarea" placeholder="Адрес" required></textarea>
@@ -353,7 +357,7 @@
           <div class="column column_s-0 column_m-0 column_l-1"></div>
           <div class="column column_s-0 column_m-3 column_l-4">
             <div class="popup-order__product">
-              <div class="popup-order__card" data-product="">
+              <div class="popup-order__card js-popup-order__card" data-product="">
 
               </div>
             </div>
@@ -363,10 +367,10 @@
     </div>
   </div>
 
-  <div class="popup-preorder popup" id="popup-preorder">
+  <div class="popup popup-preorder js-popup-preorder" id="popup-preorder">
     <div class="popup__content">
       <div class="popup__close"></div>
-      <div class="popup-preorder__card" data-product="">
+      <div class="popup-preorder__card js-popup-preorder__card" data-product="">
 
       </div>
     </div>
