правки по комментариям 2

--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@
 
                   <div class="form__block">
                     <h3 class="heading heading_level-3">Контактное лицо</h3>
-                    <div class="form__item">
+                    <div class="form__item js-form-item">
                       <input type="text" id="popup-order-name" class="input" placeholder="ФИО" name="name" required autocomplete="off" />
                     </div>
-                    <div class="form__item">
+                    <div class="form__item js-form-item">
                       <input type="text" class="input" placeholder="Электронная почта" name="email" required autocomplete="off" />
                     </div>
-                    <div class="form__item">
+                    <div class="form__item js-form-item">
                       <label class="form__label-wrapper">
                         <input type="text" class="input input_phone-pre" placeholder="+7" name="phone-pre" required value="+7" autocomplete="off" />
                       </label>
