--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#ffffff" />
 
   <title>HTML и CSS</title>
-  <link rel="stylesheet" href="css/styles.less" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -376,7 +376,7 @@
     </div>
   </div>
 
-  <script src="js/index.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
